5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1592_1802.log
== SUBMITION (2019-03-27 15:42:05) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
dano = [sqrt(5 * D1)+ pi**D2/3]
R = p-dano
int(dano)

-- EXECUTION TIME:
0.129662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1802/main.py", line 6, in <module>
    R = p-dano
TypeError: unsupported operand type(s) for -: 'int' and 'list'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:42:16) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
dano = [sqrt(5 * D1)+ pi**D2/3]
R = p-dano
int(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    R = p-dano
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:44:39) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
dano = [sqrt(5 * D1)+ pi**D2/3]
R = p-dano
print(int(R))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    R = p-dano
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:45:24) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**D2/3]
R = p - d
print(int(R))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    R = p - d
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:45:57) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**D2/3]
total = p - d
print(int(total))



-- EXECUTION TIME:
0.139132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1802/main.py", line 6, in <module>
    total = p - d
TypeError: unsupported operand type(s) for -: 'int' and 'list'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:46:09) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**D2/3]
total = p - d
print(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = p - d
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:46:22) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**D2/3]
total = p - d
print(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = p - d
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:46:40) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**D2/3]
total = (p - d)
print(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (p - d)
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:47:29) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = sqrt(5 * D1)+ pi**(D2/3)
total = (p - d)
print(total)



-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:48:20) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = sqrt(5 * D1)+ pi**(D2/3)
total = (p - d)
print(int(total))



-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:48:53) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = sqrt(5 * D1)+ pi**(D2/3)
total = (p - d)
print(int(total))



-- EXECUTION TIME:
0.176911
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:49:31) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**(D2/3)]
total = (p - d)
print(int(total))



-- EXECUTION TIME:
0.12435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1802/main.py", line 6, in <module>
    total = (p - d)
TypeError: unsupported operand type(s) for -: 'int' and 'list'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:50:38) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [sqrt(5 * D1)+ pi**(D2/3)]
total = (p - d)
print(int(total))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (p - d)
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:51:02) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = sqrt(5 * D1)+ pi**(D2/3)
total = (p - d)
print(int(total))



-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:52:08) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [5 * D1**0.5 + pi**(D2/3)
total = (p - d)
print(int(total))



-- ERROR:
File "XXXX", line 6
    total = (p - d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:52:48) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = [5**0.5 * D1**0.5 + pi**(D2/3)]
total = (p - d)
print(int(total))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (p - d)
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:53:26) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = ((5**0.5 * D1**0.5) + pi**(D2/3))
total = (p - d)
print(int(total))



-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:33:29) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = ((5**0.5 * D1**0.5) + pi**(D2/3))
total = (p - d)
print(int(total))



-- EXECUTION TIME:
0.15306
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:23:30) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = ((5* D1**0.5) + pi**(D2/3))
total = (p - d)
print(int(total))



-- OUTPUT:
185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:24:11) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
d = (sqrt(5*D1) + pi**(D2/3))
total = (p - d)
print(int(total))



-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:24:53) 
-- CODE:
from math import*
p = int(input("Valor de p: "))
D1 = int(input("Valor de D1: "))
D2 = int(input("Valor de D1: "))
d = (sqrt(5*D1) + pi**(D2/3))
total = (p - d)
print(int(total))



-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:25:56) 
-- CODE:
from math import*
p = int(input("Valor de p: "))
D1 = int(input("Valor de D1: "))
D2 = int(input("Valor de D1: "))
d = (sqrt(5*D1) + pi**(D2/3))
total = (p - int(d))
print(total)



-- EXECUTION TIME:
0.125491
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:33:13) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
Dan = (sqrt(5*D1) + pi**D2/3)
v = p - (int(Dan))
print (v)




-- EXECUTION TIME:
0.124623
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:33:49) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
Dan = (sqrt(5*D1) + pi**D2/3)
v = p - (int(Dan))
print(v)




-- EXECUTION TIME:
0.292301
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:57) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
Dan = (sqrt(5*D1) + pi**D2/3)
v = p - (int(Dan))
print(v)




-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:36:00) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
Dan = (sqrt(5*D1)) + pi**(D2/3)
v = p - (int(Dan))
print(v)




-- EXECUTION TIME:
0.156604
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:36:16) 
-- CODE:
from math import*
p = int(input())
D1 = int(input())
D2 = int(input())
Dan = (sqrt(5*D1)) + pi**(D2/3)
v = p - (int(Dan))
print(v)




-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
